// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonSnapshot should render Button without onClick 1`] = `
<button
  className="bg-white hover:bg-gray-50 border-slate-300 border text-black text-sm font-medium py-2 px-4 rounded-sm focus:outline-none focus:shadow-outline"
  type="button"
>
  children
</button>
`;

exports[`ButtonSnapshot should render Button without onClick 2`] = `
<button
  className="bg-blue-500 hover:bg-blue-700 text-white text-sm font-medium py-2 px-4 rounded-sm focus:outline-none focus:shadow-outline"
  type="button"
>
  children
</button>
`;

exports[`ButtonSnapshot should render Button without onClick 3`] = `
<button
  className="bg-white hover:bg-gray-50 border-slate-300 border text-black text-sm font-medium py-2 px-4 rounded-sm focus:outline-none focus:shadow-outline"
  type="button"
>
  children
</button>
`;

exports[`ButtonSnapshot should render normal Button 1`] = `
<button
  className="bg-white hover:bg-gray-50 border-slate-300 border text-black text-sm font-medium py-2 px-4 rounded-sm focus:outline-none focus:shadow-outline"
  onClick={[Function]}
  type="button"
>
  children
</button>
`;

exports[`ButtonSnapshot should render normal Button 2`] = `
<button
  className="bg-blue-500 hover:bg-blue-700 text-white text-sm font-medium py-2 px-4 rounded-sm focus:outline-none focus:shadow-outline"
  onClick={[Function]}
  type="button"
>
  children
</button>
`;

exports[`ButtonSnapshot should render normal Button 3`] = `
<button
  className="bg-white hover:bg-gray-50 border-slate-300 border text-black text-sm font-medium py-2 px-4 rounded-sm focus:outline-none focus:shadow-outline"
  onClick={[Function]}
  type="button"
>
  children
</button>
`;
